spelling fixes, about banner spacing

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,6 +2,8 @@
 /* Made By Scott Puglisi */
 /*------------------------------------*/
 
+.top25marg {margin-top: 25px;}
+
 /* Slider */
 .ba-slider {
     position: relative;
